Remove buggy optimisation from ltl2dpa. (#10)
The subcommand `ltl2dpa -t EKS20_EKRS17` had a bug in the index computation. The affected code path has been removed.